syntax = "proto3"; 

package secrets;

service SecretStore {
	rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
}

message GetSecretRequest {
	int32 id = 1;
}

message GetSecretResponse {
	oneof payload {
		SecretData data = 1;
		string error_message = 2;
	}
}

message SecretData {
	int32 id = 1;
	string title = 2;
	string description = 3;
	SecretLevel level = 4;
}

enum SecretLevel {
	RESTRICTED = 0;
	SECRET = 1;
	TOP_SECRET = 2;
}